# riscv_pipeline_rtl

./: .gitignore  README.md  files.f  xbld.bat  xbld.sh  xbld.tcl
prg/: RARS_convert_to_hex.py  default.mem  led_blink_kit.mem
prg/asmProgs/: uart_loop.S  uart_rx.S
prg/uBench/: add_test_01.S  addi_test.S  and_andi_test.S  andi_test.S  auipc_test_01.S  beq_test.S  bge_test.S  bgeu_test.S  blt_test.S  bltu_test.S  bne_test.S  dmem.S  dmem_byte_load_store.S  dmem_halfword.S  dmem_mixed_widths.S  dmem_sequential_words.S  dmem_sign_extend.S  dmem_sw_lw.S  jal_test.S  jal_test_01.S  jalr_test.S  lb_test.S  lb_with_sb_test.S  lbu_test.S  led_blink.s  lh_test.S  lh_with_sh_test.S  lhu_test.S  logic.S  lui_test_01.S  lw_sw_test.S  lw_test.S  lw_with_sw_test.S  or_ori_test.S  ori_test.S  sb_test.S  sh_test.S  shift_all_test.S  sll_slli_test.S  slli_test.S  (+10 more)
prg/uBench/Deprecated/: loop.asm  loop_test_01.S  slon0.S
src/: files.f
src/constr/: rv_nsu_basys_3.sdc  rv_nsu_basys_3.xdc  rv_nsu_nexys_4_ddr.xdc
src/rtl/: cpu_core.sv  cpu_system.sv
src/rtl/include/: risc-v.svh
src/rtl/lib/: dual_port_mem.sv  rst_m.sv  uart.sv
src/rtl/lib/vga/py_verify/: config.py  generate_test_patterns.py  images_to_bins.py  pyproject.toml  utils.py  verify_image.ipynb  verify_timings.py
src/rtl/lib/vga/py_verify/test_patterns/: box.png.coe  box_320x240.png.coe  checkerboard.png.coe  checkerboard_320x240.png.coe  v_lines.png.coe
src/rtl/memory/: imem.sv  register_file.sv  risc_v_dmem_rd_port_m.sv  (+1 more)
src/sim/: rv_nsu_tb.sv  sha3_256.svh  sha3_tb.sv  tb.svh  trace_logger.svh
(+27 files in other folders)
